Fixes Dockerfiles to expose port and use user root during building.
Also fixes ARM64 platform declaration in compose.yaml

--- a/compose-run.yaml
+++ b/compose-run.yaml
@@ -1,7 +1,7 @@
 services:
 
   fullspeed:
-    image: dday-old-vibes:4.4k
+    image: pcarmona/dday-old-vibes:4.4k
     restart: always
     volumes:
       - ./fullspeed/maps:/usr/local/share/q2pro/dday/maps
