Fixes source download URL using $RELEASE variable in Dockerfile of "dday-old-vibes" image.

--- a/dday-old-vibes/Dockerfile
+++ b/dday-old-vibes/Dockerfile
@@ -10,7 +10,7 @@ RUN set -xe; \
   apt-get install -y build-essential git; \
   export ARCH=$(uname -m); \
   export Q2PROARCH=$(if [ \"aarch64\" = \"$ARCH\" ]; then echo "arm64"; else echo $ARCH; fi); \
-  wget --no-check-certificate -O dday-old-vibes-src.tar.gz https://github.com/pcarmona79/dday-old-vibes/archive/refs/tags/4.4k.tar.gz; \
+  wget --no-check-certificate -O dday-old-vibes-src.tar.gz https://github.com/pcarmona79/dday-old-vibes/archive/refs/tags/${RELEASE}.tar.gz; \
   tar -zxf dday-old-vibes-src.tar.gz; \
   cd dday-old-vibes-${RELEASE}/src; \
   git config --global --add safe.directory /tmp/dday-old-vibes; \
