--- a/compose-run.yaml
+++ b/compose-run.yaml
@@ -6,6 +6,23 @@ services:
     volumes:
       - ./fullspeed/maps:/usr/local/share/q2pro/dday/maps
       - ./fullspeed/files:/home/ubuntu/.q2pro/dday
+    stdin_open: true
+    tty: true
+    network_mode: host
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: 100
+
+  dday5-server:
+    image: ddaycl-dll:5.04
+    restart: always
+    volumes:
+      - ./dday5-server/maps:/usr/local/share/q2pro/dday/maps
+      - ./dday5-server/files:/home/ubuntu/.q2pro/dday
+    stdin_open: true
+    tty: true
     network_mode: host
     logging:
       driver: "json-file"
