--- a/compose.yaml
+++ b/compose.yaml
@@ -24,12 +24,37 @@ services:
         - linux/amd64
         - linux/arm64
 
+  ddaycl-dll:
+    image: ddaycl-dll:5.04
+    build:
+      context: ./ddaycl-dll
+      platforms:
+        - linux/amd64
+        - linux/arm64
+
   fullspeed:
     image: dday-old-vibes:4.4k
     restart: always
     volumes:
       - ./fullspeed/maps:/usr/local/share/q2pro/dday/maps
       - ./fullspeed/files:/home/ubuntu/.q2pro/dday
+    stdin_open: true
+    tty: true
+    network_mode: host
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: 100
+
+  dday5-server:
+    image: ddaycl-dll:5.04
+    restart: always
+    volumes:
+      - ./dday5-server/maps:/usr/local/share/q2pro/dday/maps
+      - ./dday5-server/files:/home/ubuntu/.q2pro/dday
+    stdin_open: true
+    tty: true
     network_mode: host
     logging:
       driver: "json-file"
