--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
         - linux/arm64
 
   dday-old-vibes:
-    image: dday-old-vibes:4.4k
+    image: dday-old-vibes:4.4k-1
     build:
       context: ./dday-old-vibes
       platforms:
@@ -33,7 +33,7 @@ services:
         - linux/arm64
 
   fullspeed:
-    image: dday-old-vibes:4.4k
+    image: dday-old-vibes:4.4k-1
     restart: always
     volumes:
       - ./fullspeed/maps:/usr/local/share/q2pro/dday/maps
