Updates Dockerfile and compose.yaml to build "ddaychile-release" image version 5.042

--- a/compose.yaml
+++ b/compose.yaml
@@ -33,7 +33,7 @@ services:
         - linux/arm64
 
   ddaychile-release:
-    image: ddaychile-release:5.041-1
+    image: ddaychile-release:5.042
     build:
       context: ./ddaychile-release
       platforms:
