--- a/compose.yaml
+++ b/compose.yaml
@@ -25,7 +25,7 @@ services:
         - linux/arm64
 
   ddaycl-dll:
-    image: ddaycl-dll:5.04-k4
+    image: ddaycl-dll:5.043
     build:
       context: ./ddaycl-dll
       platforms:
