Adds "WORKDIR /tmp/" before execute main task of download and building source code in Dockerfile of q2admin-kmod, dday-old-vibes, ddaychile-release and ddaycl-dll images.
This allows to delete compiling files to reduce image size.

--- a/dday-old-vibes/Dockerfile
+++ b/dday-old-vibes/Dockerfile
@@ -3,6 +3,7 @@ FROM q2admin-kmod:1.17.50-kmod
 ENV RELEASE="4.4k-1"
 
 USER root
+WORKDIR /tmp/
 
 # compile and copy .so files to libdir directory where it will be found by q2admin
 RUN set -xe; \
