Updates Dockerfile and compose.yaml to build "ddaycl-dll-gdb" image version 5.046-gdb2

--- a/compose.yaml
+++ b/compose.yaml
@@ -33,7 +33,7 @@ services:
         - linux/arm64
 
   ddaycl-dll-gdb:
-    image: ddaycl-dll:5.046-gdb
+    image: ddaycl-dll:5.046-gdb2
     build:
       context: ./ddaycl-dll-gdb
       platforms:
