--- a/compose.yaml
+++ b/compose.yaml
@@ -25,7 +25,7 @@ services:
         - linux/arm64
 
   dday-old-vibes:
-    image: dday-old-vibes:4.6k
+    image: dday-old-vibes:4.6k-1
     build:
       context: ./dday-old-vibes
       platforms:
