--- a/compose.yaml
+++ b/compose.yaml
@@ -41,7 +41,7 @@ services:
         - linux/arm64
 
   ddaycl-dll-gdb:
-    image: ddaycl-dll:5.048-gdb1
+    image: ddaycl-dll:5.056-gdb
     build:
       context: ./ddaycl-dll-gdb
       platforms:
